apps/base/affine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: affine
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
