apps/base/affine/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: affine
  namespace: affine
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`affine.rmtt.tech`)
      kind: Rule
      services:
        - name: affine
          port: 3010
  tls:
    certResolver: cfresolver
